--- a/src/main/webapp/app/entities/sell/list/sell.component.html
+++ b/src/main/webapp/app/entities/sell/list/sell.component.html
@@ -125,7 +125,7 @@
                   </li>
 
                   <li>
-                    <a href="http://localhost/intell/public/admin/sell/return/6">
+                    <a [routerLink]="['/sell', transaction.id, 'return']">
                       <i class="fa fa-backward" style="color: #0ad629"></i>
                       Return
                     </a>
