--- a/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -123,7 +123,7 @@
         </ul>
       </li>
 
-      <li>
+      <li class="nav-item">
         <a href="javascript:void(0);" class="nav-link">
           <i class="fas fa-shopping-cart"></i> <span>{{ 'Ventes' }}</span>
           <i class="right fas fa-angle-right" style="float: right; margin-top: 8px"></i>
@@ -140,7 +140,7 @@
             </a>
           </li>
           <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-            <a routerLink="sell/new">
+            <a routerLink="sell/pos">
               <span>{{ 'POS vente' }}</span>
             </a>
           </li>
